# mcp-trader

./: .env.example  .gitignore  AUTO_RESYNC_IMPLEMENTATION.md  CHANGELOG.md  CLAUDE.md  DEPLOY.md  DEPLOYMENT_P1_FIXES.md  DOCKER.md  FEATURE_018_STATUS.md  IMPLEMENTATION_STATUS.md  Makefile  README.md  SPEC_COMPLETION_STATUS.md  TRAEFIK.md  VALIDATION_SUMMARY.md  compose.override.yml  compose.yml  test_sse_integration.sh
.github/: pull_request_template.md
.github/workflows/: build-and-push.yml  deploy.yml
.specify/memory/: constitution.md
.specify/scripts/bash/: setup-plan.sh
infra/: binance-provider.service  deploy-chatgpt.sh  deploy-quick.sh  deploy.sh  docker-compose.yml  mcp-gateway-sse.service  mcp-gateway.service  nginx-mcp-gateway.conf
mcp-gateway/: .dockerignore  Dockerfile  GATEWAY_DEPLOYMENT.md  MANUAL_TESTING_GUIDE.md  check_tools.py  providers.docker.yaml  providers.yaml  pyproject.toml  test_gateway.sh  test_sse_client.py  test_sse_debug.py  test_venue_routing.py
mcp-gateway/mcp_gateway/: __init__.py  cache.py  config.py  document_registry.py  main.py  providers_registry.py  sse_server.py  validation.py
mcp-gateway/mcp_gateway/adapters/: __init__.py  grpc_client.py  schema_adapter.py  unified_router.py
mcp-gateway/mcp_gateway/schemas/providers/: binance.json
mcp-gateway/mcp_gateway/schemas/unified/: base.py  market_orderbook_l1.json  market_ticker.json
mcp-gateway/mcp_gateway/tools/: fetch.py  search.py
mcp-gateway/tests/integration/: test_unified_routing.py  test_unified_ticker.py
pkg/proto/: provider.proto
pkg/schemas/: echo.input.schema.json
providers/binance-rs/: .dockerignore  .env.example  .gitignore  ANALYTICS_INTEGRATION_COMPLETE.md  CHATGPT_INTEGRATION.md  CODE_REVIEW_CONSTITUTION.md  Cargo.toml  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_CORRECTED.md  Dockerfile  Dockerfile.local  FEATURE_008_COMPLETE.md  FEATURE_UNIFIED_REPORT_COMPLETE.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION.md  INTEGRATION_TESTS_COMPLETE.md  PERFORMANCE_REPORT.md  PHASE_6_7_8_COMPLETE.md  README.md  SEAMLESS_COMPLETE.md  binance-provider.service  build.rs  build.sh  deploy-user.sh  deploy.sh  run-analytics.sh  test_21_tools.sh  test_grpc.sh  test_http.sh  test_http_tools.sh  test_p0_cache_key.sh  test_p1_fixes.sh
providers/binance-rs/benches/: report_performance.rs
providers/binance-rs/data/analytics/: IDENTITY  LOG  LOG.old.1760892534772707  LOG.old.1760892701031933  LOG.old.1760892723419638  LOG.old.1760893177137515  MANIFEST-000021  OPTIONS-000019
providers/binance-rs/proto/: market-report.proto
providers/binance-rs/src/: error.rs  lib.rs  main.rs
providers/binance-rs/src/binance/: client.rs  mod.rs  types.rs  websocket.rs
providers/binance-rs/src/config/: credentials.rs  http.rs  mod.rs
providers/binance-rs/src/grpc/: capabilities.rs  mod.rs  prompts.rs  resources.rs  tools.rs
providers/binance-rs/src/mcp/: handler.rs  mod.rs  resources.rs  server.rs  types.rs
providers/binance-rs/src/orderbook/: manager.rs  metrics.rs  mod.rs  rate_limiter.rs  tools.rs  types.rs  websocket.rs
providers/binance-rs/src/orderbook/analytics/: anomaly.rs  flow.rs  health.rs  mod.rs  profile.rs  tools.rs  trade_storage.rs  trade_stream.rs  trade_websocket.rs  types.rs
providers/binance-rs/src/orderbook/analytics/storage/: mod.rs  query.rs  snapshot.rs
providers/binance-rs/src/pb/: mod.rs
providers/binance-rs/src/report/: formatter.rs  generator.rs  mod.rs  sections.rs  util.rs
providers/binance-rs/src/transport/: mod.rs  sse.rs  stdio.rs
providers/binance-rs/src/transport/http/: error.rs  handler.rs  jsonrpc.rs  mod.rs  session.rs
providers/binance-rs/tests/: unit_tests.rs
providers/binance-rs/tests/integration/: report_generation.rs
providers/binance-rs/tests/unit/: mod.rs
providers/binance-rs/tests/unit/report/: cache_tests.rs  formatter_tests.rs  mod.rs  sections_tests.rs  validation_tests.rs
providers/hello-go/: go.mod
providers/hello-rs/: Cargo.toml  build.rs
scripts/deploy/: pull-and-restart.sh  rollback.sh
specs/001-specify-scripts-bash/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-specify-scripts-bash/checklists/: requirements.md
specs/001-specify-scripts-bash/contracts/: provider.proto
specs/002-binance-provider-integration/: IMPLEMENTATION_COMPLETE.md  ORDERBOOK_IMPLEMENTATION.md  PHASE11_SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-binance-provider-integration/checklists/: requirements.md
specs/002-binance-provider-integration/contracts/: README.md
specs/003-specify-scripts-bash/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-specify-scripts-bash/checklists/: .gitignore  requirements.md
specs/003-specify-scripts-bash/contracts/: detect_market_anomalies.json  get_liquidity_vacuums.json  get_microstructure_health.json  get_order_flow.json  get_volume_profile.json  streamable_http_mcp.md
specs/005-specify-scripts-bash/: plan.md  spec.md  tasks.md
specs/005-specify-scripts-bash/checklists/: requirements.md
specs/007-snapshot-persistence/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-trade-stream-persistence/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-mcp-server-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-fix-quote-stuffing-test/: plan.md  spec.md  tasks.md
specs/011-unified-exchange-tools/: plan.md  spec.md  tasks.md
specs/012-remove-exchange-specific-tools/: spec.md
specs/013-complete-unified-api/: tasks.md
specs/014-venue-binance-default/: IMPLEMENTATION.md  spec.md  tasks.md
specs/016-fix-sse-schema-bugs/: plan.md  research.md  spec.md  tasks.md
specs/017-specify-scripts-bash/: plan.md  research.md  spec.md  tasks.md
specs/018-market-data-report/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/019-github-cicd-pipeline/: plan.md  quickstart.md  research.md  spec.md  tasks.md
(+22 files in other folders)
