[project]
name = "mcp-gateway"
version = "0.1.0"
description = "MCP Gateway for provider orchestration"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.7.1",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "jsonschema>=4.20.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
