[package]
name = "binance-provider"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "binance-provider"
path = "src/main.rs"

[dependencies]
# gRPC and protobuf
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "signal"] }
tokio-util = "0.7"
futures = "0.3"
futures-util = "0.3"

# MCP SDK (preserved from mcp-binance-rs)
rmcp = { version = "0.8.1", features = ["server", "macros", "transport-io", "transport-sse-server"], optional = true }

# HTTP client for Binance API
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# JSON Schema generation
schemars = { version = "1.0.4", features = ["chrono04"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto (for Binance API signing)
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Optional features
tokio-tungstenite = { version = "0.28", features = ["native-tls"], optional = true }
rust_decimal = { version = "1.37", optional = true }
governor = { version = "0.6", optional = true }

# Analytics dependencies
rocksdb = { version = "0.23.0", optional = true }
statrs = { version = "0.18.0", optional = true }
rmp-serde = { version = "1.3.0", optional = true }
uuid = { version = "1.11", features = ["v4", "serde"], optional = true }

# HTTP transport dependencies
axum = { version = "0.8.6", features = ["ws", "macros"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }

[build-dependencies]
tonic-build = "0.9"

[features]
default = ["orderbook", "http-api", "websocket", "orderbook_analytics", "http_transport"]
orderbook = ["tokio-tungstenite", "rust_decimal", "governor"]
websocket = ["tokio-tungstenite"]
http-api = []
orderbook_analytics = ["orderbook", "rocksdb", "statrs", "rmp-serde", "uuid"]
http_transport = ["axum", "tower", "tower-http", "uuid"]
mcp_server = ["rmcp"]
sse = ["mcp_server", "axum", "tower", "tower-http", "uuid"]

[dev-dependencies]
tempfile = "3.8"
